<resources>
    <string name="app_name">Chit Chat</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="don_t_have">Don\'t have an account? Sign Up!</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already">Already have an account? Sign In!</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_worry">Don\'t worry we just need your \n registered email address and it\'s done!!</string>
    <string name="reset_password">Reset Password</string>
    <string name="recovery_email_sent_successfully_check_your_inbox">Recovery email sent successfully ! check your inbox</string>
    <string name="go_back"><![CDATA[<< Go Back]]></string>
    <string name="type_a_message">Type a message</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="search">search</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users">Users</string>
    <string name="chats">Chats</string>
</resources>